# Adria-DX12

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
Adria/: Adria.vcxproj  Adria.vcxproj.filters  CMakeLists.txt  imgui.ini  main.cpp  packages.config  precomp.h  todo.txt
Adria/Core/: CommandLineOptions.cpp  CommandLineOptions.h  ConsoleManager.cpp  ConsoleManager.h  Defines.h  Engine.cpp  Engine.h  FatalAssert.cpp  FatalAssert.h  IConsoleManager.h  Input.cpp  Input.h  Log.cpp  Log.h  Macros.h  Paths.cpp  Paths.h  Types.h  Window.cpp  Window.h
Adria/Core/LogSinks/: ConsoleSink.cpp  ConsoleSink.h  DebuggerSink.cpp  DebuggerSink.h  FileSink.cpp  FileSink.h
Adria/Core/Loggers/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  OutputDebugStringLogger.cpp  OutputDebugStringLogger.h
Adria/Core/Logging/: Log.cpp  Log.h
Adria/Editor/: Editor.cpp  Editor.h  EditorConsole.cpp  EditorConsole.h  EditorSink.cpp  EditorSink.h  GUICommand.h  ImGuiManager.cpp  ImGuiManager.h
Adria/Editor/D3D12/: D3D12ImGuiManager.cpp  D3D12ImGuiManager.h
Adria/Editor/Metal/: MetalImGuiManager.h  MetalImGuiManager.mm
Adria/Graphics/: GfxBuffer.cpp  GfxBuffer.h  GfxBufferView.cpp  GfxBufferView.h  GfxCapabilities.cpp  GfxCapabilities.h  GfxCommandList.cpp  GfxCommandList.h  GfxCommandListPool.cpp  GfxCommandListPool.h  GfxCommandQueue.cpp  GfxCommandQueue.h  GfxCommandSignature.h  GfxCommon.cpp  GfxCommon.h  GfxConstantBuffer.h  GfxDefines.h  GfxDescriptor.h  GfxDescriptorAllocator.cpp  GfxDescriptorAllocator.h  GfxDescriptorAllocatorBase.cpp  GfxDescriptorHeap.h  GfxDevice.cpp  GfxDevice.h  GfxDynamicAllocation.h  GfxFence.cpp  GfxFence.h  GfxFormat.h  GfxLinearDynamicAllocator.cpp  GfxLinearDynamicAllocator.h  GfxMacros.h  GfxNsightAftermathGpuCrashTracker.cpp  GfxNsightAftermathGpuCrashTracker.h  GfxNsightPerfManager.cpp  GfxNsightPerfManager.h  GfxPIX.cpp  GfxPIX.h  GfxPipelineState.cpp  GfxPipelineState.h  GfxPipelineStateFwd.h  (+38 more)
Adria/Graphics/D3D12/: D3D12Buffer.cpp  D3D12Buffer.h  D3D12Capabilities.cpp  D3D12Capabilities.h  D3D12CommandList.cpp  D3D12CommandList.h  D3D12CommandQueue.cpp  D3D12CommandQueue.h  D3D12CommandSignature.cpp  D3D12CommandSignature.h  D3D12Conversions.cpp  D3D12Conversions.h  D3D12Defines.h  D3D12Descriptor.cpp  D3D12Descriptor.h  D3D12DescriptorAllocator.cpp  D3D12DescriptorAllocator.h  D3D12DescriptorHeap.cpp  D3D12DescriptorHeap.h  D3D12Device.cpp  D3D12Device.h  D3D12Fence.cpp  D3D12Fence.h  D3D12NsightAftermathGpuCrashTracker.cpp  D3D12NsightAftermathGpuCrashTracker.h  D3D12NsightPerfManager.cpp  D3D12NsightPerfManager.h  D3D12PIX.cpp  D3D12PIX.h  D3D12PipelineState.cpp  D3D12PipelineState.h  D3D12QueryHeap.cpp  D3D12QueryHeap.h  D3D12RayTracingAS.cpp  D3D12RayTracingAS.h  D3D12RayTracingPipeline.cpp  D3D12RayTracingPipeline.h  D3D12RayTracingShaderBindings.cpp  D3D12RayTracingShaderBindings.h  D3D12RingDescriptorAllocator.h  (+9 more)
Adria/Graphics/Metal/: MetalArgumentBuffer.h  MetalArgumentBuffer.mm  MetalBuffer.h  MetalBuffer.mm  MetalCommandList.h  MetalCommandList.mm  MetalConversions.h  MetalDescriptor.h  MetalDescriptor.mm  MetalDescriptorAllocator.h  MetalDescriptorAllocator.mm  MetalDevice.h  MetalDevice.mm  MetalFence.h  MetalFence.mm  MetalPipelineState.h  MetalPipelineState.mm  MetalQueryHeap.h  MetalQueryHeap.mm  MetalRayTracingAS.h  MetalRayTracingAS.mm  MetalRayTracingPipeline.h  MetalRayTracingPipeline.mm  MetalRayTracingShaderBindings.h  MetalRayTracingShaderBindings.mm  MetalRingDescriptorAllocator.h  MetalRingDescriptorAllocator.mm  MetalShaderReflection.h  MetalSwapchain.h  MetalSwapchain.mm  MetalTexture.h  MetalTexture.mm
Adria/Logging/: CallbackSink.cpp  CallbackSink.h  ConsoleSink.cpp  ConsoleSink.h  DebuggerSink.cpp  DebuggerSink.h  FileSink.cpp  FileSink.h  Log.cpp  Log.h  LogChannels.def
Adria/Logging/Windows/: DebuggerSink.cpp  DebuggerSink.h
Adria/Math/: BoundingVolumeUtil.h  Constants.h  Halton.h  MathTypes.h  NormalsUtil.h  Packing.cpp  Packing.h
Adria/Platform/: Input.h  Window.h
Adria/Platform/Windows/: Adria.rc  Input.cpp  Window.cpp  main.cpp
Adria/Platform/macOS/: Input.mm  Window.mm  main.mm
Adria/RenderGraph/: RenderGraph.cpp  RenderGraph.h  RenderGraphAllocator.h  RenderGraphBlackboard.h  RenderGraphBuilder.cpp  RenderGraphBuilder.h  RenderGraphContext.cpp  RenderGraphContext.h  RenderGraphEvent.h  RenderGraphPass.h  RenderGraphResourceId.h  RenderGraphResourceName.h  RenderGraphResourcePool.h
Adria/Rendering/: AccelerationStructure.cpp  AccelerationStructure.h  AmbientOcclusionManager.cpp  AmbientOcclusionManager.h  AutoExposurePass.cpp  AutoExposurePass.h  BloomPass.cpp  BloomPass.h  BlurPass.cpp  BlurPass.h  CRTFilterPass.cpp  CRTFilterPass.h  Camera.cpp  Camera.h  ClusteredDeferredLightingPass.cpp  ClusteredDeferredLightingPass.h  Components.cpp  Components.h  D3D12_DLSS3Pass.cpp  D3D12_DLSS3Pass.h  D3D12_FFXCACAOPass.cpp  D3D12_FFXCACAOPass.h  D3D12_FFXCASPass.cpp  D3D12_FFXCASPass.h  D3D12_FFXDepthOfFieldPass.cpp  D3D12_FFXDepthOfFieldPass.h  D3D12_FFXVRSPass.cpp  D3D12_FFXVRSPass.h  D3D12_FSR2Pass.cpp  D3D12_FSR2Pass.h  D3D12_FSR3Pass.cpp  D3D12_FSR3Pass.h  D3D12_XeSS2Pass.cpp  D3D12_XeSS2Pass.h  DDGIPass.cpp  DDGIPass.h  DLSS3Pass.cpp  DLSS3Pass.h  DebugRenderer.cpp  DebugRenderer.h  (+132 more)
Adria/Resources/Icons/: adria_logo.icns
Adria/Resources/Shaders/: CommonResources.hlsli  GpuAssert.hlsli  GpuPrintf.hlsli  Lighting.hlsli  Packing.hlsli  Scene.hlsli  Surface.hlsli  triangle.hlsl
Adria/Tools/: generate_cmake.py
Adria/Utilities/: Align.h  AllocatorUtil.h  BufferReader.h  CLIParser.cpp  CLIParser.h  ConcurrentQueue.h  Delegate.h  DynamicLibrary.cpp  DynamicLibrary.h  Enum.h  EnumUtil.h  FileWatcher.h  FilesUtil.cpp  FloatCompressor.h  Hash.h  Heightmap.cpp  Heightmap.h  HosekDataRGB.h  Image.cpp  Image.h  Json.h  LinearOffsetAllocator.h  MemoryLeakDetector.h  PathHelpers.cpp  PathHelpers.h  Random.h  Ref.h  Releasable.h  RingBuffer.h  RingOffsetAllocator.h  StringConversions.cpp  StringConversions.h  StringUtil.cpp  TemplatesUtil.h  ThreadPool.h  Timer.h  Tree.h  hwbp.h
(+54 files in other folders)
