
set(ADRIA_COMMON_SOURCES
	"${CMAKE_CURRENT_SOURCE_DIR}/Core/CommandLineOptions.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Core/CommandLineOptions.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Core/ConsoleManager.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Core/ConsoleManager.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Core/Engine.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Core/Engine.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Core/FatalAssert.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Core/FatalAssert.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Core/IConsoleManager.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Core/Defines.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Core/Paths.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Core/Paths.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Core/Types.h"
	
	"${CMAKE_CURRENT_SOURCE_DIR}/Platform/Input.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Platform/Window.h"

	"${CMAKE_CURRENT_SOURCE_DIR}/Editor/Editor.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Editor/Editor.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Editor/EditorConsole.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Editor/EditorConsole.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Editor/EditorEvents.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Editor/EditorSink.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Editor/EditorSink.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Editor/GUICommand.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Editor/GUICommand.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Editor/ImGuiManager.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Editor/ImGuiManager.h"
	
	"${CMAKE_CURRENT_SOURCE_DIR}/Logging/Log.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Logging/Log.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/Logging/LogChannels.def"
	"${CMAKE_CURRENT_SOURCE_DIR}/Logging/FileSink.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Logging/FileSink.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/Logging/ConsoleSink.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Logging/ConsoleSink.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/Logging/CallbackSink.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Logging/CallbackSink.cpp"
	
	"${CMAKE_CURRENT_SOURCE_DIR}/Math/MathTypes.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Math/MathCommon.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Math/Constants.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Math/NormalsUtil.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Math/Halton.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Math/Packing.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Math/Packing.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/Math/BoundingVolumeUtil.h"
	
	"${CMAKE_CURRENT_SOURCE_DIR}/RenderGraph/RenderGraph.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/RenderGraph/RenderGraph.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/RenderGraph/RenderGraphAllocator.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/RenderGraph/RenderGraphBlackboard.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/RenderGraph/RenderGraphBuilder.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/RenderGraph/RenderGraphBuilder.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/RenderGraph/RenderGraphContext.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/RenderGraph/RenderGraphContext.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/RenderGraph/RenderGraphEvent.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/RenderGraph/RenderGraphEvent.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/RenderGraph/RenderGraphPass.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/RenderGraph/RenderGraphResourceId.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/RenderGraph/RenderGraphResourceName.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/RenderGraph/RenderGraphResourcePool.h"
	
	"${CMAKE_CURRENT_SOURCE_DIR}/Utilities/Align.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/BufferReader.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/CLIParser.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/CLIParser.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/ConcurrentQueue.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/Delegate.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/DynamicLibrary.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/DynamicLibrary.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/Enum.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/FileWatcher.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/FloatCompressor.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/HardwareBreakpoint.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/Hash.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/Heightmap.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/Heightmap.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/HosekDataRGB.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/Image.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/Image.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/ImageWrite.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/ImageWrite.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/Json.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/LinearAllocator.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/LinearOffsetAllocator.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/MemoryLeakDetector.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/PathHelpers.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/PathHelpers.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/Random.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/Ref.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/Releasable.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/RingBuffer.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/RingOffsetAllocator.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/Singleton.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/StringConversions.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/StringConversions.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/TemplatesUtil.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/ThreadPool.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/Timer.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/Tree.h"
	
	"${CMAKE_CURRENT_SOURCE_DIR}/Rendering/AccelerationStructure.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/AccelerationStructure.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/AmbientOcclusionManager.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/AmbientOcclusionManager.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/AutoExposurePass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/AutoExposurePass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/BlackboardData.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/BloomPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/BloomPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/BlurPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/BlurPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/CRTFilterPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/CRTFilterPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/Camera.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/Camera.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/ClusteredDeferredLightingPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/ClusteredDeferredLightingPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/Components.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/Components.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/DDGIPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/DDGIPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/DLSS3Pass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/DLSS3Pass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/DebugRenderer.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/DebugRenderer.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/DecalsPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/DecalsPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/DeferredLightingPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/DeferredLightingPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/DepthOfFieldPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/DepthOfFieldPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/DepthOfFieldPassGroup.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/DepthOfFieldPassGroup.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/DirectMLPassBase.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/DirectMLPassBase.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/DirectMLUpscalerPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/DirectMLUpscalerPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/ExponentialHeightFogPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/ExponentialHeightFogPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/FFXCACAOPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/FFXCACAOPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/FFXCASPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/FFXCASPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/FFXDepthOfFieldPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/FFXDepthOfFieldPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/FFXVRSPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/FFXVRSPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/FSR2Pass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/FSR2Pass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/FSR3Pass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/FSR3Pass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/FXAAPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/FXAAPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/FidelityFXUtils.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/FidelityFXUtils.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/FilmEffectsPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/FilmEffectsPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/FogVolumesPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/FogVolumesPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/GBufferPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/GBufferPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/GPUDebugFeature.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/GPUDebugFeature.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/GPUDrivenGBufferPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/GPUDrivenGBufferPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/GeometryBufferCache.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/GeometryBufferCache.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/GodRaysPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/GodRaysPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/GpuAssert.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/GpuAssert.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/GpuPrintf.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/GpuPrintf.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/HBAOPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/HBAOPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/HelperPasses.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/HelperPasses.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/LensFlarePass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/LensFlarePass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/Meshlet.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/MotionBlurPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/MotionBlurPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/MotionVectorsPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/MotionVectorsPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/NNAOPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/NNAOPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/OIDNDenoiserPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/OIDNDenoiserPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/OceanRenderer.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/OceanRenderer.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/PathTracingPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/PathTracingPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/PickingPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/PickingPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/PostEffect.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/Postprocessor.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/Postprocessor.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/RainBlockerMapPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/RainBlockerMapPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/RainDropsPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/RainDropsPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/RainPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/RainPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/RayMarchedVolumetricFogPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/RayMarchedVolumetricFogPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/RayTracedAmbientOcclusionPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/RayTracedAmbientOcclusionPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/RayTracedReflectionsPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/RayTracedReflectionsPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/RayTracedShadowsPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/RayTracedShadowsPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/ReSTIR_DI.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/ReSTIR_DI.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/ReflectionPassGroup.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/ReflectionPassGroup.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/Renderer.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/Renderer.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/RendererDebugViewPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/RendererDebugViewPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/SSAOPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/SSAOPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/SSRPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/SSRPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/SVGFDenoiserPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/SVGFDenoiserPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/SceneConfig.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/SceneConfig.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/SceneLoader.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/SceneLoader.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/ShaderManager.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/ShaderManager.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/ShaderStructs.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/ShadowRenderer.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/ShadowRenderer.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/SkyModel.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/SkyModel.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/SkyPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/SkyPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/SunPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/SunPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/TAAPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/TAAPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/TextureHandle.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/TextureManager.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/TextureManager.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/TiledDeferredLightingPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/TiledDeferredLightingPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/ToneMapPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/ToneMapPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/TransparentPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/TransparentPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/UpscalerPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/UpscalerPassGroup.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/UpscalerPassGroup.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/ViewportData.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/VolumetricCloudsPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/VolumetricCloudsPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/VolumetricFogManager.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/VolumetricFogManager.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/XeSS2Pass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Rendering/XeSS2Pass.h"
)

set(ADRIA_GRAPHICS_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxBuffer.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxBuffer.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxCapabilities.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxCapabilities.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxCommandList.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxCommandList.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxCommandListPool.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxCommandListPool.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxCommandQueue.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxCommandQueue.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxCommandSignature.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxCommandSignature.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxCommon.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxCommon.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxConstantBuffer.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxDescriptor.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxDescriptorAllocator.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxDescriptorAllocator.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxDescriptorAllocatorBase.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxDescriptorAllocatorBase.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxDevice.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxDevice.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxDynamicAllocation.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxFence.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxFence.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxFormat.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxInputLayout.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxLinearDynamicAllocator.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxLinearDynamicAllocator.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxDefines.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxNsightAftermathGpuCrashTracker.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxNsightAftermathGpuCrashTracker.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxNsightPerfManager.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxNsightPerfManager.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxPIX.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxPIX.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxPipelineState.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxPipelineState.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxPipelineStatePermutations.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxPipelineStatePermutationsFwd.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxProfiler.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxProfiler.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxProfilerFwd.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxQueryHeap.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxQueryHeap.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxRayTracingAS.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxRayTracingAS.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxRayTracingShaderTable.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxRayTracingShaderTable.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxReflection.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxReflection.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxRenderDoc.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxRenderDoc.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxRenderPass.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxResourceCommon.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxRingDescriptorAllocator.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxRingDynamicAllocator.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxRingDynamicAllocator.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxScopedEvent.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxScopedEvent.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxShader.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxShaderCompiler.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxShaderCompiler.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxShaderEnums.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxShaderKey.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxShaderKey.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxShadingRate.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxStateObject.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxStateObject.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxStates.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxSwapchain.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxSwapchain.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxTexture.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxTexture.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxTracyProfiler.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxTracyProfiler.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/GfxVertexFormat.h"
)

set(ADRIA_WIN32_SOURCES
	"${CMAKE_CURRENT_SOURCE_DIR}/Platform/Windows/main.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/Platform/Windows/Window.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/Platform/Windows/Input.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/Platform/Windows/Windows.h"
	
	"${CMAKE_CURRENT_SOURCE_DIR}/Logging/Windows/DebuggerSink.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Logging/Windows/DebuggerSink.cpp"	
)

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${ADRIA_COMMON_SOURCES} ${ADRIA_GRAPHICS_SOURCES} ${ADRIA_WIN32_SOURCES})

file(GLOB_RECURSE SHADER_FILES
    "${CMAKE_CURRENT_SOURCE_DIR}/Resources/Shaders/*.hlsl"
    "${CMAKE_CURRENT_SOURCE_DIR}/Resources/Shaders/*.hlsli"
)
set_source_files_properties(${SHADER_FILES} PROPERTIES HEADER_FILE_ONLY TRUE)
source_group(
    TREE "${CMAKE_CURRENT_SOURCE_DIR}/Resources/Shaders"
    PREFIX "Shaders"
    FILES ${SHADER_FILES}
)

set(EXTERNAL_DIR "${CMAKE_SOURCE_DIR}/External")

set(EXTERNAL_SOURCES
    "${EXTERNAL_DIR}/ImGui/imgui.cpp"
    "${EXTERNAL_DIR}/ImGui/imgui_draw.cpp"
    "${EXTERNAL_DIR}/ImGui/imgui_tables.cpp"
    "${EXTERNAL_DIR}/ImGui/imgui_widgets.cpp"
    "${EXTERNAL_DIR}/ImGui/imgui_impl_dx12.cpp"
    "${EXTERNAL_DIR}/ImGui/imgui_impl_win32.cpp"
	
	"${EXTERNAL_DIR}/SimpleMath/SimpleMath.cpp"
	
	"${EXTERNAL_DIR}/D3D12MA/D3D12MemAlloc.cpp"
	
	"${EXTERNAL_DIR}/ImPlot/implot.cpp"
	"${EXTERNAL_DIR}/ImPlot/implot_items.cpp"
	
	"${EXTERNAL_DIR}/meshoptimizer/allocator.cpp"
    "${EXTERNAL_DIR}/meshoptimizer/clusterizer.cpp"
    "${EXTERNAL_DIR}/meshoptimizer/indexcodec.cpp"
    "${EXTERNAL_DIR}/meshoptimizer/indexgenerator.cpp"
    "${EXTERNAL_DIR}/meshoptimizer/overdrawanalyzer.cpp"
    "${EXTERNAL_DIR}/meshoptimizer/overdrawoptimizer.cpp"
    "${EXTERNAL_DIR}/meshoptimizer/partition.cpp"
    "${EXTERNAL_DIR}/meshoptimizer/quantization.cpp"
    "${EXTERNAL_DIR}/meshoptimizer/simplifier.cpp"
    "${EXTERNAL_DIR}/meshoptimizer/spatialorder.cpp"
    "${EXTERNAL_DIR}/meshoptimizer/stripifier.cpp"
    "${EXTERNAL_DIR}/meshoptimizer/vcacheanalyzer.cpp"
    "${EXTERNAL_DIR}/meshoptimizer/vcacheoptimizer.cpp"
    "${EXTERNAL_DIR}/meshoptimizer/vfetchanalyzer.cpp"
    "${EXTERNAL_DIR}/meshoptimizer/vfetchoptimizer.cpp"
    "${EXTERNAL_DIR}/meshoptimizer/vertexcodec.cpp"
    "${EXTERNAL_DIR}/meshoptimizer/vertexfilter.cpp"
	
    "${EXTERNAL_DIR}/tracy/TracyClient.cpp"
)
source_group("External" FILES ${EXTERNAL_SOURCES})

add_executable(Adria WIN32 ${ADRIA_COMMON_SOURCES} ${ADRIA_GRAPHICS_SOURCES} ${ADRIA_WIN32_SOURCES} ${EXTERNAL_SOURCES} ${SHADER_FILES})

target_precompile_headers(Adria PRIVATE precomp.h)

target_include_directories(Adria PRIVATE
    "${CMAKE_CURRENT_SOURCE_DIR}"
    "${EXTERNAL_DIR}/d3dx12"
    "${EXTERNAL_DIR}/DirectMLX"
    "${EXTERNAL_DIR}/D3D12MA"
    "${EXTERNAL_DIR}/stb"
    "${EXTERNAL_DIR}/dxc/include"
    "${EXTERNAL_DIR}/cgltf"
    "${EXTERNAL_DIR}/tinyobjloader"
    "${EXTERNAL_DIR}/FastNoiseLite"
    "${EXTERNAL_DIR}/json"
    "${EXTERNAL_DIR}/entt"
    "${EXTERNAL_DIR}/nfd/include"
    "${EXTERNAL_DIR}/FontAwesome"
    "${EXTERNAL_DIR}/meshoptimizer"
    "${EXTERNAL_DIR}/cereal"
    "${EXTERNAL_DIR}/ImGui"
    "${EXTERNAL_DIR}/Tracy"
    "${EXTERNAL_DIR}/SimpleMath"
    "${EXTERNAL_DIR}/XeSS/inc"
    "${EXTERNAL_DIR}/DLSS/include"
    "${EXTERNAL_DIR}/FidelityFX-SDK/include"
    "${EXTERNAL_DIR}/NVIDIA_Aftermath_SDK/include"
    "${EXTERNAL_DIR}/NvPerf"
    "${EXTERNAL_DIR}/ImPlot"
    "${EXTERNAL_DIR}/oidn-2.3.2/include"
    "${EXTERNAL_DIR}/renderdoc"
    "${EXTERNAL_DIR}/DirectX12 Agility SDK/include"
    "${EXTERNAL_DIR}/winpixeventruntime/include/WinPixEventRuntime"
)

target_compile_options(Adria PRIVATE /MP)

target_compile_definitions(Adria PRIVATE
    $<$<CONFIG:Debug>:_DEBUG;_CONSOLE>
    $<$<CONFIG:Profile>:NDEBUG;_PROFILE;_CONSOLE;TRACY_ENABLE>
    $<$<CONFIG:Release,RelWithDebInfo>:NDEBUG;_CONSOLE>
)

target_link_libraries(Adria PRIVATE
    d3d12.lib
    dxgi.lib
    dxguid.lib
    DirectML.lib
    "${EXTERNAL_DIR}/NVIDIA_Aftermath_SDK/lib/GFSDK_Aftermath_Lib.x64.lib"
    "${EXTERNAL_DIR}/XeSS/lib/libxess.lib"
    "${EXTERNAL_DIR}/winpixeventruntime/lib/WinPixEventRuntime.lib"

    $<$<CONFIG:Debug>:
    "${EXTERNAL_DIR}/nfd/lib/nfd_d.lib"
    "${EXTERNAL_DIR}/DLSS/lib/nvsdk_ngx_d_dbg.lib"
    "${EXTERNAL_DIR}/FidelityFX-SDK/lib/ffx_dof_x64d.lib"
    "${EXTERNAL_DIR}/FidelityFX-SDK/lib/ffx_fsr2_x64d.lib"
    "${EXTERNAL_DIR}/FidelityFX-SDK/lib/ffx_fsr3_x64d.lib"
    "${EXTERNAL_DIR}/FidelityFX-SDK/lib/ffx_cas_x64d.lib"
    "${EXTERNAL_DIR}/FidelityFX-SDK/lib/ffx_backend_dx12_x64d.lib"
    "${EXTERNAL_DIR}/FidelityFX-SDK/lib/ffx_cacao_x64d.lib"
    "${EXTERNAL_DIR}/FidelityFX-SDK/lib/ffx_frameinterpolation_x64d.lib"
    "${EXTERNAL_DIR}/FidelityFX-SDK/lib/ffx_opticalflow_x64d.lib"
    "${EXTERNAL_DIR}/FidelityFX-SDK/lib/ffx_fsr3upscaler_x64d.lib"
    "${EXTERNAL_DIR}/FidelityFX-SDK/lib/ffx_vrs_x64d.lib"
	>

	$<$<CONFIG:Profile,Release,RelWithDebInfo>:
		"${EXTERNAL_DIR}/nfd/lib/nfd.lib"
		"${EXTERNAL_DIR}/DLSS/lib/nvsdk_ngx_d.lib"
		"${EXTERNAL_DIR}/FidelityFX-SDK/lib/ffx_dof_x64.lib"
		"${EXTERNAL_DIR}/FidelityFX-SDK/lib/ffx_fsr2_x64.lib"
		"${EXTERNAL_DIR}/FidelityFX-SDK/lib/ffx_fsr3_x64.lib"
		"${EXTERNAL_DIR}/FidelityFX-SDK/lib/ffx_cas_x64.lib"
		"${EXTERNAL_DIR}/FidelityFX-SDK/lib/ffx_backend_dx12_x64.lib"
		"${EXTERNAL_DIR}/FidelityFX-SDK/lib/ffx_cacao_x64.lib"
		"${EXTERNAL_DIR}/FidelityFX-SDK/lib/ffx_frameinterpolation_x64.lib"
		"${EXTERNAL_DIR}/FidelityFX-SDK/lib/ffx_opticalflow_x64.lib"
		"${EXTERNAL_DIR}/FidelityFX-SDK/lib/ffx_fsr3upscaler_x64.lib"
		"${EXTERNAL_DIR}/FidelityFX-SDK/lib/ffx_vrs_x64.lib"
	>
)

function(copy_runtime_dll SOURCE_FILE TARGET_NAME)
    add_custom_command(TARGET ${TARGET_NAME} POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
        "${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE_FILE}"
        $<TARGET_FILE_DIR:${TARGET_NAME}>
        COMMENT "Copying ${SOURCE_FILE} to output directory"
    )
endfunction()


copy_runtime_dll("D3D12Core.dll" Adria)
copy_runtime_dll("d3d12SDKLayers.dll" Adria)
copy_runtime_dll("D3D12StateObjectCompiler.dll" Adria)
copy_runtime_dll("dxcompiler.dll" Adria)
copy_runtime_dll("dxil.dll" Adria)
copy_runtime_dll("GFSDK_Aftermath_Lib.x64.dll" Adria)
copy_runtime_dll("libxess.dll" Adria)
copy_runtime_dll("nvperf_grfx_host.dll" Adria)
copy_runtime_dll("renderdoc.dll" Adria)
copy_runtime_dll("WinPixEventRuntime.dll" Adria)